# Old-Sanctuary-Remote-Access

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: cluster_60day.yaml  dev_available.yaml  dev_haiku.yaml  dev_local.yaml  diagnostic_single_tier.yaml  fulfillment_test.yaml  long_horizon_d11_overnight.yaml  long_horizon_d11_resume_test.yaml  long_horizon_d11_vllm_pilot.yaml  long_horizon_d12_vllm.yaml  long_horizon_multi_tenant_test.yaml  long_horizon_qwen.yaml  production.yaml  redesign_validation.yaml  scheming_a_inverted_margins.yaml  scheming_b_bankruptcy.yaml  scheming_c_economics_surfaced.yaml  scheming_d_combined.yaml  scheming_e_no_defects.yaml  smoke_10day.yaml  smoke_3day.yaml  smoke_haiku.yaml  tier5_mistral.yaml  tier5_mistral_30day.yaml  tier5_mistral_30day_noaldridge.yaml  tier5_qwen.yaml  validation_30day.yaml
docs/: design_decisions.md  long_horizon_experiment_spec.md  sanctuary_specification.docx
metrics/: aggregate.py
sanctuary/: __init__.py  __main__.py  agent.py  config.py  context_manager.py  dev.py  economics.py  engine.py  events.py  fulfillment.py  living_ledger.py  logs.py  market.py  memory.py  messaging.py  post_run_report.py  prompts.py  replay.py  report.py  revelation.py  run.py  run_directory.py  simulation.py  style.py  transcripts.py
scripts/: analyze_tier5_pilot.py  check_ollama_parallelism.py  check_status.sh  d12_deep_dive.py  d12_deep_dive_v2.py  d12_redesign_analysis.py  generate_report.py  llm_judge_cot.py  run_background.sh  run_simulation.py
sweeps/: baseline_vs_ebay.yaml  (+17 more)
(+71 files in other folders)
